# AI-Engineering

./: commands.txt  pyproject.toml  requirments.txt  sitecustomize.py
Automated Clinical Trial Matcher MVP/: .env.example  README.md  main.py  requirements.txt  sitecustomize.py
Automated Clinical Trial Matcher MVP/agents/: anonymizer.py  evaluator.py  scribe.py  searcher.py
Automated Clinical Trial Matcher MVP/hooks/: hipaa_guardrail.py
Automated Clinical Trial Matcher MVP/orchestrator/: master.py
Automated Clinical Trial Matcher MVP/sample_data/: sample_patient.txt
Automated Clinical Trial Matcher MVP/tests/: test_pipeline_dryrun.py
Automated Clinical Trial Matcher MVP/tools/: clinical_trials_api.py
Automated Clinical Trial Matcher MVP/utils/: logger.py  pdf_parser.py  state.py
Basics/Analyzing Text Data  with Deep Learning/: Chapter I.ipynb  text_anlaysis.ipynb
Google_ADK/: main.py
Learning_and_test/: api_cost_log.csv  test_sdk.ipynb
app/: database.py  inventory_service.py  main.py
app/Reference/: 00_claude_agent_sdk_complete_guide.md  01_practical_examples.py  02_quick_reference.md  note.txt
app/agent/: agents.py
app/code/: 02_models.py  03_controller_updated.py  04_init_db.py  05_schema.sql  06_env_template  07_main_example.py  (+3 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
langraph/: 02agentwithmemory.ipynb  Graph.ipynb  agents.ipynb  chroma.sqlite3  logging.txt  reAct_agents.ipynb
sdk-comparison/: README.md  requirements.txt
(+79 files in other folders)
