[project]
name = "claudesdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.1",
    "anyio>=4.13.0",
    "claude-agent-sdk>=0.2.82",
    "fastapi>=0.121.1",
    "google-adk[extensions]>=1.16.0",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.38.0",
]
